textwire/testdata/good/before/slots-optional/index.tw
<section>
@component('comp')@slot('h4')Textwire@end@end
</section>