textwire/testdata/bad/comp-error/index.tw
@component("hero")
    @slot
        <h1>Title</h1>
    @end
@end
